# Autonomous-Driving-Projects

./: README.md
Task_1_PPO_Highway_Driving/: README.md  highway_ppo_task.ipynb
Task_2_Dempster-Shafer_Grid_Fusion/: README.md  lidar_grid.py
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/: .flake8  README.md  local_launch.sh
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/protos/: SumoInterface.proto
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/src/fusion_grid/: package.xml  setup.cfg  setup.py
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/src/fusion_grid/fusion_grid/: fusion_driver copy 2.py  fusion_driver copy 3.py  fusion_driver copy.py  fusion_driver.py  lidar_grid.py
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/src/fusion_grid_cpp/: CMakeLists.txt  package.xml
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/src/fusion_grid_cpp/src/: lidar_grid.cpp  lidar_grid.hpp
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/src/robot_launch/: setup.py
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/src/robot_launch/launch/: local_launch.py
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/src/robot_launch/resource/: robot_webots.urdf
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/src/robot_launch/robot_launch/: ros2_nodes.py
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/src/robot_launch/worlds/: .village_realistic.wbproj  village_realistic.wbt
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/src/robot_test/: package.xml  setup.py
Task_2_Dempster-Shafer_Grid_Fusion/Dempster-Shafer_Grid_Fusion/src/robot_test/robot_test/: __init__.py  testconfigurationNode.py
Task_3_Intelligent_Driver_Model_ACC/: ACCAgent.py  README.md
Task_3_Intelligent_Driver_Model_ACC/Acc_car/: .gitignore  README.md  cloud_launch.sh
Task_3_Intelligent_Driver_Model_ACC/Acc_car/docker/: Dockerfile  build.sh  run.sh
Task_3_Intelligent_Driver_Model_ACC/Acc_car/src/acc_control/: package.xml  setup.cfg  setup.py
Task_3_Intelligent_Driver_Model_ACC/Acc_car/src/acc_control_cpp/: CMakeLists.txt  package.xml
Task_3_Intelligent_Driver_Model_ACC/Acc_car/src/acc_control_cpp/src/: acc_agent.cpp  acc_agent.hpp
Task_3_Intelligent_Driver_Model_ACC/Acc_car/src/robot_launch/: package.xml  setup.py
Task_3_Intelligent_Driver_Model_ACC/Acc_car/src/webots_interfaces/: CMakeLists.txt
(+19 files in other folders)
